fix ru loc message

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1264,8 +1264,7 @@ message.settings_successfully_saved=Настройки сохранены
 message.2fa.title=Настройки 2-x факторной авторизации
 message.2fa.via_email=2-х факторная авторизация через email
 message.attention=ВНИМАНИЕ!!!
-message.2fa.text2=Я принимаю все риски связанные с отсутствием двухфакторной авторизации\
-message.2fa.accept=Принимаю
+message.2fa.text2=Я принимаю все риски связанные с отсутствием двухфакторной авторизации
 message.2fa.aggree.toSettings=К настройкам
 message.2fa.decline1=Нет спасибо
 message.2fa.text1=Уважаемые пользователи! <br>\
