add right notify and resent email

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1127,3 +1127,5 @@ message.2fa.decline1=No thanks
 message.2fa.aggree.toSettings=Go to settings
 message.2fa.accept=Accept
 message.2fa.text2=I accept all risks associated with the lack of two-factor authorization
+message.2fa.pinsended=New pin-code was sent
+login.pin.sendagain=Send pin again
