--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1232,3 +1232,5 @@ message.2fa.decline1=No thanks
 message.2fa.text1=Dear users!<br>\
 The exchange recorded attempts to hijack accounts and find passwords.<br>\
 For the security of your account, please use the two-factor authorization to enter the site.<br>
+login.pin.sendagain=Send pin again
+message.2fa.pinsended=New pin-code was sent
