--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1271,3 +1271,5 @@ message.2fa.text1=Уважаемые пользователи! <br>\
 На бирже зафиксированы попытки взлома аккаунтов и подбора паролей. <br>\
 Для безопасности Вашего аккаунта просим Вас воспользоваться двухфакторной авторизацией для входа на сайт.
 message.2fa.accept=Принимаю
+login.pin.sendagain=Отправить пин заново
+message.2fa.pinsended=Новый пин был отправлен
