--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1110,7 +1110,7 @@ btcWallet.createRequest=Create refill request
 btcWallet.txDetails=Transaction details
 btcWallet.noAddress=Address not found in the database
 transaction.hash=Hash
-message.pincode.forlogin=Your pin-code for login to Exrates is {0}
+message.pincode.forlogin=Loggin attemp {0}, {1} from ip. Your pin-code for login to Exrates is {2}. If it was not you, ignore the message.
 message.pincode.login.subject=You recieve pincode from Exrates
 message.pin_code=Pin
 message.pin_code.sent.toyou=Please enter PIN code that was sent to your email
