--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1254,7 +1254,7 @@ merchants.refill.xlm=Адрес платежа: {0}   <br>\
 Поле MEMO-ID: {1}
 merchants.withdraw.WAITING_REVIEWING=Ожидание проверки
 transaction.hash=Hash
-message.pincode.forlogin=Ваш пин-код для входа на биржу Exrates: {0}
+message.pincode.forlogin=Попытка входа {0}, c ip {1}. Ваш пин-код для входа на биржу Exrates {2}. Eсли это были не вы, игнорируйте сообщение.
 message.pincode.login.subject=Вы получили пин-код от Exrates
 message.pin_code=Пин
 message.pin_code.sent.toyou=Пожалуйста, введите пин-код, который был выслан на ваш имейл
