--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -842,7 +842,7 @@ merchants.refill.xlm=Payment Address: {0}   <br>\
  Payment MEMO-ID: {1}
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
 transaction.hash=Hash
-message.pincode.forlogin=Loggin attemp {0}, {1} from ip. Your pin-code for login to Exrates is {2}. If it was not you, ignore the message.
+message.pincode.forlogin=Loggin attemp {0}, from ip {1}. Your pin-code for login to Exrates is {2}. If it was not you, ignore the message.
 message.pincode.login.subject=You recieve pincode from Exrates
 message.pin_code=Pin
 message.pin_code.sent.toyou=Please enter  PIN code that was sent to your email
