--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1346,3 +1346,5 @@ message.receive.voucher=Your account has been refilled for {0} {1}
 voucher.invoice.not.found=Voucher not found!
 voucher.request.limit.exceed=Requests limit exceed, try again for one hour
 voucher.vouchers=Vouchers
+action.button.REVOKE_ADMIN_BUTTON=Revoke
+merchants.transfer.REVOKED_ADMIN=Revoked by admin
