--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1220,3 +1220,5 @@ voucher.invoice.not.found=Voucher not found!
 voucher.request.limit.exceed=Requests limit exceed, try again for one hour
 transaction.hash=Hash
 voucher.vouchers=Vouchers
+action.button.REVOKE_ADMIN_BUTTON=Revoke
+merchants.transfer.REVOKED_ADMIN=Revoked by admin
