--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -847,3 +847,5 @@ transaction.hash=Hash
 voucher.invoice.not.found=Voucher not found!
 voucher.request.limit.exceed=Requests limit exceed, try again for one hour
 voucher.vouchers=Vouchers
+action.button.REVOKE_ADMIN_BUTTON=Revoke
+merchants.transfer.REVOKED_ADMIN=Revoked by admin
