--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1341,7 +1341,7 @@ merchants.refill.xlm=Payment Address: {0}   <br>\
  Payment MEMO-ID: {1}
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
 transaction.hash=Hash
-voucher.code=Voucher reedem
+voucher.code=Voucher redeem
 message.receive.voucher=Your account has been refilled for {0} {1}
 voucher.invoice.not.found=Voucher not found!
 voucher.request.limit.exceed=Requests limit exceed, try again for one hour
