--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -215,7 +215,6 @@ merchants.OutputRequestsLimit=Your daily output limit for this currency has been
 myorders.amountbuy=commission free amount
 myorders.amountsell=sum
 myorders.amountwithcommission=amount including commission
-myorders.buy=
 myorders.buyorders=Purchase orders
 myorders.commission=Commission
 myorders.create=Create Order
@@ -1125,7 +1124,7 @@ transfer.amount=Amount
 merchants.transferNotification.header=Exrates Transfer notification
 merchants.transferNotification.POSTED=Your transfer request #{0} through system {1} has been posted
 merchants.transferNotification.POSTPONED_AS_VOUCHER=Your transfer request #{0} through system {1} has been created
-voucher.code=Voucher reedem
+voucher.code=Voucher redeem
 message.receive.voucher=Your account has been refilled for {0} {1}
 voucher.invoice.not.found=Voucher not found!
 voucher.request.limit.exceed=Requests limit exceed, try again for one hour
