--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1213,7 +1213,7 @@ btcWallet.noAddress=Address not found in the database
 merchants.refill.xlm=Payment Address: {0}   <br>\
  Payment MEMO-ID: {1}
 action.button.ACCEPT_HOLDED_BUTTON=accept
-voucher.code=Voucher reedem
+voucher.code=Voucher redeem
 message.receive.voucher=Your account has been refilled for {0} {1}
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
 voucher.invoice.not.found=Voucher not found!
