--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1258,6 +1258,6 @@ merchants.withdraw.WAITING_REVIEWING=Ожидание проверки
 transaction.hash=Hash
 voucher.invoice.not.found=Ваучер не найден!
 voucher.request.limit.exceed=Лимит запросов исчерпан, попробуйте снова через час.
-voucher.vouchers=Vouchers
-action.button.REVOKE_ADMIN_BUTTON=Revoke
-merchants.transfer.REVOKED_ADMIN=Revoked by admin
+voucher.vouchers=Ваучеры
+action.button.REVOKE_ADMIN_BUTTON=Отменить
+merchants.transfer.REVOKED_ADMIN=Отменено администратором
