--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -840,7 +840,7 @@ btcWallet.noAddress=Address not found in the database
 action.button.ACCEPT_HOLDED_BUTTON=accept
 merchants.refill.xlm=Payment Address: {0}   <br>\
  Payment MEMO-ID: {1}
-voucher.code=Voucher reedem
+voucher.code=Voucher redeem
 message.receive.voucher=Your account has been refilled for {0} {1}
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
 transaction.hash=Hash
