--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1367,3 +1367,13 @@ voucher.request.limit.exceed=Requests limit exceed, try again for one hour
 voucher.vouchers=Vouchers
 action.button.REVOKE_ADMIN_BUTTON=Revoke
 merchants.transfer.REVOKED_ADMIN=Revoked by admin
+merchants.transferNotification.POSTPONED_AS_VOUCHER=Your transfer request #{0} through system {1} has been created
+merchants.transferNotification.POSTED=Your transfer request #{0} through system {1} has been posted
+merchants.transferNotification.header=Exrates Transfer notification
+transfer.amount=Amount
+merchants.modalTransferRecipient=Enter recipient user nickname :
+merchants.modalTransferFinalSum=Amount to be transferred : __amount __currency
+merchants.modalTransferCommission=Transfer Fee will be : __amount __currency __percent
+merchants.modalTransferHeader=You __transferType __amount __currency
+merchants.transfer=Transfer
+merchants.transferTitle=Transfer
