--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1241,3 +1241,13 @@ The exchange recorded attempts to hijack accounts and find passwords.<br>\
 For the security of your account, please use the two-factor authorization to enter the site.<br>
 login.pin.sendagain=Send pin again
 message.2fa.pinsended=New pin-code was sent
+merchants.transferNotification.POSTPONED_AS_VOUCHER=Your transfer request #{0} through system {1} has been created
+merchants.transferNotification.POSTED=Your transfer request #{0} through system {1} has been posted
+merchants.transferNotification.header=Exrates Transfer notification
+transfer.amount=Amount
+merchants.modalTransferRecipient=Enter recipient user nickname :
+merchants.modalTransferFinalSum=Amount to be transferred : __amount __currency
+merchants.modalTransferCommission=Transfer Fee will be : __amount __currency __percent
+merchants.modalTransferHeader=You __transferType __amount __currency
+merchants.transfer=Transfer
+merchants.transferTitle=Transfer
