--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1280,3 +1280,13 @@ message.2fa.text1=Уважаемые пользователи! <br>\
 message.2fa.accept=Принимаю
 login.pin.sendagain=Отправить пин заново
 message.2fa.pinsended=Новый пин был отправлен
+merchants.transferNotification.POSTPONED_AS_VOUCHER=Ваш перевод #{0} через систему {1} был создан
+merchants.transferNotification.POSTED=Ваш перевод #{0} через систему {1} был выполнен
+merchants.transferNotification.header=Exrates сообщение о переводе
+transfer.amount=Сумма
+merchants.modalTransferRecipient=Введите имя получателя :
+merchants.modalTransferFinalSum=Сумма к перводу : __amount __currency
+merchants.modalTransferCommission=Оплата за первод : __amount __currency __percent
+merchants.modalTransferHeader=Вы __transferType __amount __currency
+merchants.transfer=Перевод
+merchants.transferTitle=Перевод
