add code modal, fix tr

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1251,3 +1251,4 @@ merchants.modalTransferCommission=Transfer Fee will be : __amount __currency __p
 merchants.modalTransferHeader=You __transferType __amount __currency
 merchants.transfer=Transfer
 merchants.transferTitle=Transfer
+action.button.SHOW_CODE_BUTTON=Code
