--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1290,3 +1290,4 @@ merchants.modalTransferCommission=Оплата за первод : __amount __cu
 merchants.modalTransferHeader=Вы __transferType __amount __currency
 merchants.transfer=Перевод
 merchants.transferTitle=Перевод
+action.button.SHOW_CODE_BUTTON=Код
