--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1150,3 +1150,4 @@ voucher.request.limit.exceed=Requests limit exceed, try again for one hour
 voucher.vouchers=Vouchers
 action.button.REVOKE_ADMIN_BUTTON=Revoke
 merchants.transfer.REVOKED_ADMIN=Revoked by admin
+action.button.SHOW_CODE_BUTTON=Code
