--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1135,7 +1135,7 @@ login.pin.sendagain=Send pin again
 
 merchants.transferTitle=Transfer
 merchants.transfer=Transfer
-merchants.modalTransferHeader=You __transferType __amount __currency
+merchants.modalTransferHeader=You create transfer through system __transferType on __amount __currency
 merchants.modalTransferCommission=Transfer Fee will be : __amount __currency __percent
 merchants.modalTransferFinalSum=Amount to be transferred : __amount __currency
 merchants.modalTransferRecipient=Enter recipient user nickname :
@@ -1151,3 +1151,4 @@ voucher.vouchers=Vouchers
 action.button.REVOKE_ADMIN_BUTTON=Revoke
 merchants.transfer.REVOKED_ADMIN=Revoked by admin
 action.button.SHOW_CODE_BUTTON=Code
+voucher.enter.code=Enter voucher code
