--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -870,7 +870,7 @@ admin.unblockAllInput=Разблокировать весь ввод
 admin.unblockAllOutput=Разблокировать весь вывод
 transactionsourcetype.USER_TRANSFER=ПОЛЬЗОВАТЕЛЬ
 operationtype.USER_TRANSFER=ПЕРЕВОД
-mywallets.transfer=Перевести
+mywallets.transfer=Перевод
 wallets.transferTitle=Перевод средств другому пользователю
 wallets.transferCurrency=Валюта к переводу
 wallets.modalTransferCommission=Комиссия биржи составит : __amount __currency (__percent)
@@ -1285,9 +1285,15 @@ merchants.transferNotification.POSTED=Ваш перевод #{0} через си
 merchants.transferNotification.header=Exrates сообщение о переводе
 transfer.amount=Сумма
 merchants.modalTransferRecipient=Введите имя получателя :
-merchants.modalTransferFinalSum=Сумма к перводу : __amount __currency
-merchants.modalTransferCommission=Оплата за первод : __amount __currency __percent
-merchants.modalTransferHeader=Вы __transferType __amount __currency
+merchants.modalTransferFinalSum=Сумма к переводу : __amount __currency
+merchants.modalTransferCommission=Оплата за перевод : __amount __currency __percent
+merchants.modalTransferHeader=Вы создаете перевод через систему __transferType на __amount __currency
 merchants.transfer=Перевод
 merchants.transferTitle=Перевод
 action.button.SHOW_CODE_BUTTON=Код
+merchants.transfer.POSTED=Использован
+merchants.transfer.POSTPONED_AS_VOUCHER=Отложено как ваучер
+merchants.transfer.REVOKED_USER=Отменено
+merchants.transfer.CREATED_USER=Создано
+admin.admin.ref.showRefsNull=Show 0 amount
+voucher.enter.code=Ввод кода ваучера
