--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1248,7 +1248,14 @@ transfer.amount=Amount
 merchants.modalTransferRecipient=Enter recipient user nickname :
 merchants.modalTransferFinalSum=Amount to be transferred : __amount __currency
 merchants.modalTransferCommission=Transfer Fee will be : __amount __currency __percent
-merchants.modalTransferHeader=You __transferType __amount __currency
+merchants.modalTransferHeader=You create transfer through system __transferType on __amount __currency
 merchants.transfer=Transfer
 merchants.transferTitle=Transfer
 action.button.SHOW_CODE_BUTTON=Code
+merchants.transfer.POSTED=POSTED
+rightsider.currentTime=Current time:
+merchants.transfer.POSTPONED_AS_VOUCHER=POSTPONED AS VOUCHER
+merchants.transfer.REVOKED_USER=Revoked
+merchants.transfer.CREATED_USER=CREATED
+admin.admin.ref.showRefsNull=Show 0 amount
+voucher.enter.code=Enter voucher code
