--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -230,7 +230,6 @@ myorders.editfailed=order edit error!
 myorders.editsuccess=order was changed
 myorders.noorders=You have no orders
 myorders.sellorders=Sell orders
-myorders.status=
 myorders.text=here you can see and cancel your orders
 myorders.title=My orders
 mywallets.commissionbalance=profitable balance
@@ -464,7 +463,6 @@ news.date=Date news
 news.datetimeplaceholder=yyyy-mm-dd
 news.errordatetime=Format: yyyy-mm-dd
 news.resource=The directory to store
-news.resourceerror=
 news.deletenews=Remove news
 news.addnews=Add news
 news.deletevariant=Remove news
@@ -841,7 +839,6 @@ admin.withdraw.accepted=Accepted
 admin.withdraw.declined=Declined
 admin.invoice.updateAmount=Update actual sum of payment
 merchants.invoice.ACCEPTED_AUTO=Accepted
-merchants.invoice.ON_BCH_EXAM=
 merchants.btc_invoice.expired.message=Your BTC invoice id {0} has been expired!
 merchants.btc_invoice.addressToPay=Address to pay
 merchants.btc_invoice.transactionHash=Transaction hash
@@ -1152,3 +1149,5 @@ action.button.REVOKE_ADMIN_BUTTON=Revoke
 merchants.transfer.REVOKED_ADMIN=Revoked by admin
 action.button.SHOW_CODE_BUTTON=Code
 voucher.enter.code=Enter voucher code
+Payment=Destination TAG: {1}
+merchants.withdraw.new=New
