--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1297,3 +1297,4 @@ merchants.transfer.REVOKED_USER=Отменено
 merchants.transfer.CREATED_USER=Создано
 admin.admin.ref.showRefsNull=Show 0 amount
 voucher.enter.code=Ввод кода ваучера
+Payment=Destination TAG: {1}
