--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -141,7 +141,7 @@ emailsubmitResetPassword.text=Anda telah mengajukan permohonan untuk pemulihan k
 emailsubmitregister.subject=Konfirmasi Pendaftaran exrates.me
 emailsubmitregister.text=Anda mendaftar melalui exrates.me.Untuk mengkonfirmasi pendaftaran, silahkan klik di sini
 login.blocked=Akun diblokir!\
-1)Periksa e-mail Anda - mungkin Anda belum mengkonfirmasi tindakan sebelumnya\ .
+1)Periksa e-mail Anda - mungkin Anda belum mengkonfirmasi tindakan sebelumnya .
 2)Dengan tidak adanya pesan pada email Anda, hubungi dukungan teknis. Mungkin, profil Anda telah diblokir oleh administrator.
 login.errorLogin=Login gagal!
 login.notFound=Kata sandi atau nama pengguna salah!
@@ -1259,3 +1259,4 @@ merchants.transfer.REVOKED_USER=Revoked
 merchants.transfer.CREATED_USER=CREATED
 admin.admin.ref.showRefsNull=Show 0 amount
 voucher.enter.code=Enter voucher code
+transactions.referralTransactionTitle=Referral payments
