--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1151,3 +1151,4 @@ action.button.SHOW_CODE_BUTTON=Code
 voucher.enter.code=Enter voucher code
 Payment=Destination TAG: {1}
 merchants.withdraw.new=New
+message.only.latin.symblos=Only Latin symbols
