--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -888,3 +888,4 @@ admin.admin.ref.showRefsNull=Show 0 amount
 voucher.enter.code=Enter voucher code
 merchants.transfer.minSum=Minimal sum for transfer:
 mywallets.transfer=Transfer
+message.only.latin.symblos=Only Latin symbols
