--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1385,3 +1385,4 @@ merchants.transfer.REVOKED_USER=Revoked
 merchants.transfer.CREATED_USER=CREATED
 admin.admin.ref.showRefsNull=Show 0 amount
 voucher.enter.code=Enter voucher code
+message.only.latin.symblos=Only Latin symbols
