--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1260,3 +1260,4 @@ merchants.transfer.CREATED_USER=CREATED
 admin.admin.ref.showRefsNull=Show 0 amount
 voucher.enter.code=Enter voucher code
 transactions.referralTransactionTitle=Referral payments
+message.only.latin.symblos=Only Latin symbols
