--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1298,3 +1298,4 @@ merchants.transfer.CREATED_USER=Создано
 admin.admin.ref.showRefsNull=Show 0 amount
 voucher.enter.code=Ввод кода ваучера
 Payment=Destination TAG: {1}
+message.only.latin.symblos=Только латинские символы допустимы
