--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1152,3 +1152,5 @@ voucher.enter.code=Enter voucher code
 Payment=Destination TAG: {1}
 merchants.withdraw.new=New
 message.only.latin.symblos=Only Latin symbols
+admin.orders.cantaccept=It's user order, you can't accept it
+admin.orders.accept.warning=Attention, it's order created by trader, you should not accep it!
