--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1299,3 +1299,5 @@ admin.admin.ref.showRefsNull=Show 0 amount
 voucher.enter.code=Ввод кода ваучера
 Payment=Destination TAG: {1}
 message.only.latin.symblos=Только латинские символы допустимы
+admin.orders.accept.warning=Внимание, это ордер созданный трейдером, вы не должны его принимать!
+admin.orders.cantaccept=Это пользователький ордер, вы не можете принять его!
