--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1261,3 +1261,5 @@ admin.admin.ref.showRefsNull=Show 0 amount
 voucher.enter.code=Enter voucher code
 transactions.referralTransactionTitle=Referral payments
 message.only.latin.symblos=Only Latin symbols
+admin.orders.accept.warning=Attention, it's order created by trader, you should not accep it!
+admin.orders.cantaccept=It's user order, you can't accept it
