--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -889,3 +889,5 @@ voucher.enter.code=Enter voucher code
 merchants.transfer.minSum=Minimal sum for transfer:
 mywallets.transfer=Transfer
 message.only.latin.symblos=Only Latin symbols
+admin.orders.accept.warning=Attention, it's order created by trader, you should not accep it!
+admin.orders.cantaccept=It's user order, you can't accept it
