add role filter for orders, add max sum input

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1263,3 +1263,5 @@ transactions.referralTransactionTitle=Referral payments
 message.only.latin.symblos=Only Latin symbols
 admin.orders.accept.warning=Attention, it's order created by trader, you should not accep it!
 admin.orders.cantaccept=It's user order, you can't accept it
+orderinfo.creator.role=Role of creator
+merchants.addAll=Add all
