--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1301,3 +1301,5 @@ Payment=Destination TAG: {1}
 message.only.latin.symblos=Только латинские символы допустимы
 admin.orders.accept.warning=Внимание, это ордер созданный трейдером, вы не должны его принимать!
 admin.orders.cantaccept=Это пользователький ордер, вы не можете принять его!
+orderinfo.creator.role=Роль пользователя-создателя
+merchants.addAll=Добавить всё
