--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1222,3 +1222,5 @@ voucher.enter.code=Enter voucher code
 message.only.latin.symblos=Only Latin symbols
 admin.orders.accept.warning=Attention, it's order created by trader, you should not accep it!
 admin.orders.cantaccept=It's user order, you can't accept it
+orderinfo.creator.role=Role of creator
+merchants.addAll=Add all
