--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1154,3 +1154,5 @@ merchants.withdraw.new=New
 message.only.latin.symblos=Only Latin symbols
 admin.orders.cantaccept=It's user order, you can't accept it
 admin.orders.accept.warning=Attention, it's order created by trader, you should not accep it!
+orderinfo.creator.role=Role of creator
+merchants.addAll=Add all
