--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -891,3 +891,5 @@ mywallets.transfer=Transfer
 message.only.latin.symblos=Only Latin symbols
 admin.orders.accept.warning=Attention, it's order created by trader, you should not accep it!
 admin.orders.cantaccept=It's user order, you can't accept it
+orderinfo.creator.role=Role of creator
+merchants.addAll=Add all
