--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -893,3 +893,4 @@ admin.orders.accept.warning=Attention, it's order created by trader, you should 
 admin.orders.cantaccept=It's user order, you can't accept it
 orderinfo.creator.role=Role of creator
 merchants.addAll=Add all
+atbWallet.title=ATB-coin wallet
