--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1303,3 +1303,4 @@ admin.orders.accept.warning=Внимание, это ордер созданны
 admin.orders.cantaccept=Это пользователький ордер, вы не можете принять его!
 orderinfo.creator.role=Роль пользователя-создателя
 merchants.addAll=Добавить всё
+atbWallet.title=ATB-coin wallet
