--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1390,3 +1390,5 @@ admin.orders.accept.warning=Attention, it's order created by trader, you should 
 admin.orders.cantaccept=It's user order, you can't accept it
 orderinfo.creator.role=Role of creator
 merchants.addAll=Add all
+message.ref.DELETED=Canceled
+message.ref.PAYED=Payed
