--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1156,3 +1156,5 @@ admin.orders.cantaccept=It's user order, you can't accept it
 admin.orders.accept.warning=Attention, it's order created by trader, you should not accep it!
 orderinfo.creator.role=Role of creator
 merchants.addAll=Add all
+message.ref.DELETED=Canceled
+message.ref.PAYED=Payed
