--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1265,3 +1265,5 @@ admin.orders.accept.warning=Attention, it's order created by trader, you should 
 admin.orders.cantaccept=It's user order, you can't accept it
 orderinfo.creator.role=Role of creator
 merchants.addAll=Add all
+message.ref.DELETED=Canceled
+message.ref.PAYED=Payed
