--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1191,7 +1191,7 @@ merchants.refill.REVOKED_USER=Отозвано
 merchants.refill.CREATED_BY_FACT=Создано
 merchants.refill.ON_BCH_EXAM=Получено подтверждений {0}
 merchants.refill.ACCEPTED_ADMIN=Принято
-merchants.refill.ACCEPTED_AUTO=Приянято
+merchants.refill.ACCEPTED_AUTO=Принято
 merchants.refill.DECLINED_ADMIN=Отклонено
 merchants.refill.EXPIRED=Просрочено
 merchants.refill.ON_INNER_TRANSFERRING=Получено
@@ -1303,3 +1303,5 @@ admin.orders.accept.warning=Внимание, это ордер созданны
 admin.orders.cantaccept=Это пользователький ордер, вы не можете принять его!
 orderinfo.creator.role=Роль пользователя-создателя
 merchants.addAll=Добавить всё
+message.ref.PAYED=Оплачено
+message.ref.DELETED=Отменено
