--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1303,3 +1303,9 @@ admin.orders.accept.warning=Внимание, это ордер созданны
 admin.orders.cantaccept=Это пользователький ордер, вы не можете принять его!
 orderinfo.creator.role=Роль пользователя-создателя
 merchants.addAll=Добавить всё
+message.ripple.tagError=Поле {0} должно состоять только из цифр и иметь значение от 0 до 4294967295
+message.stellar.tagError=Поле {0} должно состоять только из цифр и иметь значение от 0 до 9007199254740991
+message.nem.tagError=Поле {0} должно быть меньше 512 байт
+message.comission.dynamic=Рассчитывается динамически
+merchants.refill.XEM=Адрес: {0}   <br>\
+поле Message: {1}
