--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1265,3 +1265,9 @@ admin.orders.accept.warning=Attention, it's order created by trader, you should 
 admin.orders.cantaccept=It's user order, you can't accept it
 orderinfo.creator.role=Role of creator
 merchants.addAll=Add all
+message.ripple.tagError=Field {0} must contains only digits and have value from 0 to 4294967295
+message.stellar.tagError=Field {0} must contains only digits and have value from 0 to 9007199254740991
+message.nem.tagError=Field {0} must be shorter than 512 bytes
+message.comission.dynamic=Counted dynamicaly
+merchants.refill.XEM=Payment Address: {0}   <br>\
+field Message: {1}
