--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1226,3 +1226,9 @@ orderinfo.creator.role=Role of creator
 merchants.addAll=Add all
 message.ref.DELETED=Canceled
 message.ref.PAYED=Payed
+message.comission.dynamic=Counted dynamicaly
+message.nem.tagError=Field {0} must be shorter than 512 bytes
+message.stellar.tagError=Field {0} must contains only digits and have value from 0 to 9007199254740991
+message.ripple.tagError=Field {0} must contains only digits and have value from 0 to 4294967295
+merchants.refill.XEM=Payment Address: {0}   <br>\
+field Message: {1}
