--- a/Controller/src/main/resources/messages_th.properties
+++ b/Controller/src/main/resources/messages_th.properties
@@ -828,7 +828,7 @@ ltcWallet.title=Litecoin Wallet
 merchant.ripple.emptyRefill=Refill on {0}. No transfer to account because of 20 xrp must holds on your account
 merchants.modalOutputAddressTag=Destination tag
 merchants.withdrawDetails.destinationTag=Destination tag
- Payment Destination TAG: {1}
+ Payment Destination TAG\: {1}
 dashWallet.title=Dash Wallet
 transactionsourcetype.STOP_ORDER=STOP-ORDER
 merchants.invoiceDetails.additional=Additional details
