--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -990,8 +990,6 @@ admin.order.acceptsuccess=Order {0} accepted successfully
 manageOrder.title=Manage orders
 orderinfo.orderSource=Source order
 orderinfo.orderChildren=Derived orders
-btcWallet.confirmedNonSpendableBalance=Balance on confirmation:
-
 refill.createError = Error while the refill request creation
 merchants.refillNotification.header=Exrates Refill notification
 merchants.refillNotification.WAITING_CONFIRMATION_USER=Your refill request #{0} through system {1} has been created and wait for your confirmation
@@ -1165,3 +1163,4 @@ message.nem.tagError=Field {0} must be shorter than 512 bytes
 message.comission.dynamic=Counted dynamicaly
 merchants.refill.XEM=Payment Address: {0}   <br>\
 field Message: {1}
+transfer.accept.success={0} successfully transferred to your account
