--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1232,3 +1232,4 @@ message.stellar.tagError=Field {0} must contains only digits and have value from
 message.ripple.tagError=Field {0} must contains only digits and have value from 0 to 4294967295
 merchants.refill.XEM=Payment Address: {0}   <br>\
 field Message: {1}
+transfer.accept.success={0} successfully transferred to your account
