--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1274,3 +1274,4 @@ message.nem.tagError=Field {0} must be shorter than 512 bytes
 message.comission.dynamic=Counted dynamicaly
 merchants.refill.XEM=Payment Address: {0}   <br>\
 field Message: {1}
+transfer.accept.success={0} successfully transferred to your account
