--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1232,5 +1232,6 @@ message.stellar.tagError=Field {0} must contains only digits and have value from
 message.ripple.tagError=Field {0} must contains only digits and have value from 0 to 4294967295
 merchants.refill.XEM=Payment Address: {0}   <br>\
 field Message: {1}
+order.accept.wrongRole=You are not allowed to accept orders created by {0}
 transfer.accept.success={0} successfully transferred to your account
 bchWallet.title=Bitcoin Cash Wallet
