--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1312,5 +1312,6 @@ message.comission.dynamic=Рассчитывается динамически
 merchants.refill.XEM=Адрес: {0}   <br>\
 поле Message: {1}
 atbWallet.title=ATB-coin wallet
+order.accept.wrongRole=Вы не можете принять ордер пользователя с ролью {0}
 transfer.accept.success={0} успешно переведено на ваш счёт
 bchWallet.title=Кошелёк Bitcoin Cash
