add role filter

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1399,6 +1399,7 @@ message.comission.dynamic=Counted dynamicaly
 merchants.refill.XEM=Payment Address: {0}   <br>\
 field Message: {1}
 atbWallet.title=ATB-coin wallet
+order.accept.wrongRole=You are not allowed to accept orders created by {0}
 message.cp.USD=USD markets
 message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
