--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -990,7 +990,6 @@ admin.order.acceptsuccess=Order {0} accepted successfully
 manageOrder.title=Manage orders
 orderinfo.orderSource=Source order
 orderinfo.orderChildren=Derived orders
-btcWallet.confirmedNonSpendableBalance=Balance on confirmation:
 
 refill.createError = Error while the refill request creation
 merchants.refillNotification.header=Exrates Refill notification
@@ -1165,6 +1164,7 @@ message.comission.dynamic=Counted dynamicaly
 merchants.refill.XEM=Payment Address: {0}   <br>\
 field Message: {1}
 atbWallet.title=ATB-coin wallet
+order.accept.wrongRole=You are not allowed to accept orders created by {0}
 message.cp.USD=USD markets
 message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
