--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1312,6 +1312,7 @@ message.comission.dynamic=Рассчитывается динамически
 merchants.refill.XEM=Адрес: {0}   <br>\
 поле Message: {1}
 atbWallet.title=ATB-coin wallet
+order.accept.wrongRole=Вы не можете принять ордер пользователя с ролью {0}
 message.cp.USD=USD markets
 message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
