add role filter - js

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1233,5 +1233,7 @@ message.ripple.tagError=Field {0} must contains only digits and have value from 
 merchants.refill.XEM=Payment Address: {0}   <br>\
 field Message: {1}
 order.accept.wrongRole=You are not allowed to accept orders created by {0}
+orders.roleFilter=Show orders for roles
+orders.allRoles=All roles
 transfer.accept.success={0} successfully transferred to your account
 bchWallet.title=Bitcoin Cash Wallet
