--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1165,5 +1165,7 @@ merchants.refill.XEM=Payment Address: {0}   <br>\
 field Message: {1}
 atbWallet.title=ATB-coin wallet
 order.accept.wrongRole=You are not allowed to accept orders created by {0}
+orders.roleFilter=Show orders for roles
+orders.allRoles=All roles
 transfer.accept.success={0} successfully transferred to your account
 bchWallet.title=Bitcoin Cash Wallet
