--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1313,5 +1313,7 @@ merchants.refill.XEM=Адрес: {0}   <br>\
 поле Message: {1}
 atbWallet.title=ATB-coin wallet
 order.accept.wrongRole=Вы не можете принять ордер пользователя с ролью {0}
+orders.roleFilter=Показывать ордера для ролей
+orders.allRoles=Все роли
 transfer.accept.success={0} успешно переведено на ваш счёт
 bchWallet.title=Кошелёк Bitcoin Cash
