add role filter - js

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1400,6 +1400,8 @@ merchants.refill.XEM=Payment Address: {0}   <br>\
 field Message: {1}
 atbWallet.title=ATB-coin wallet
 order.accept.wrongRole=You are not allowed to accept orders created by {0}
+orders.roleFilter=Show orders for roles
+orders.allRoles=All roles
 message.cp.USD=USD markets
 message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
