--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1313,6 +1313,8 @@ merchants.refill.XEM=Адрес: {0}   <br>\
 поле Message: {1}
 atbWallet.title=ATB-coin wallet
 order.accept.wrongRole=Вы не можете принять ордер пользователя с ролью {0}
+orders.roleFilter=Показывать ордера для ролей
+orders.allRoles=Все роли
 message.cp.USD=USD markets
 message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
