--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1165,7 +1165,8 @@ merchants.refill.XEM=Payment Address: {0}   <br>\
 field Message: {1}
 atbWallet.title=ATB-coin wallet
 order.accept.wrongRole=You are not allowed to accept orders created by {0}
-orders.roleFilter=Show orders for roles
+orders.roleFilter=Show orders only for current role
+admin.autoTrading.title=Auto-trading settings
 orders.allRoles=All roles
 message.cp.USD=USD markets
 message.cp.BTC=BTC markets
