add trader bot - back

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1313,7 +1313,8 @@ merchants.refill.XEM=Адрес: {0}   <br>\
 поле Message: {1}
 atbWallet.title=ATB-coin wallet
 order.accept.wrongRole=Вы не можете принять ордер пользователя с ролью {0}
-orders.roleFilter=Показывать ордера для ролей
+orders.roleFilter=Показывать ордера только для текущей роли
 orders.allRoles=Все роли
+admin.autoTrading.title=Настройки авто-торговли
 transfer.accept.success={0} успешно переведено на ваш счёт
 bchWallet.title=Кошелёк Bitcoin Cash
