add trader bot - front

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1167,6 +1167,18 @@ atbWallet.title=ATB-coin wallet
 order.accept.wrongRole=You are not allowed to accept orders created by {0}
 orders.roleFilter=Show orders only for current role
 admin.autoTrading.title=Auto-trading settings
+admin.autoTrading.settings.roles=Role settings
+admin.autoTrading.settings.bot=Bot settings
+admin.autoTrading.role=Role
+admin.autoTrading.sameRoleOnly=Accept orders only from same role users
+admin.autoTrading.botAccept=Allow bot to accept orders
+admin.autoTrading.bot.notCreated=Bot has not been created yet
+admin.autoTrading.bot.create=Create bot
+admin.autoTrading.bot.nickname=Nickname
+admin.autoTrading.bot.email=Email
+admin.autoTrading.bot.status=Enabled
+admin.autoTrading.bot.timeout=Timeout before accept, sec.
+
 orders.allRoles=All roles
 message.cp.USD=USD markets
 message.cp.BTC=BTC markets
