--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1399,3 +1399,5 @@ message.comission.dynamic=Counted dynamicaly
 merchants.refill.XEM=Payment Address: {0}   <br>\
 field Message: {1}
 atbWallet.title=ATB-coin wallet
+transfer.accept.success={0} successfully transferred to your account
+bchWallet.title=Bitcoin Cash Wallet
