--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1312,3 +1312,5 @@ message.comission.dynamic=Рассчитывается динамически
 merchants.refill.XEM=Адрес: {0}   <br>\
 поле Message: {1}
 atbWallet.title=ATB-coin wallet
+transfer.accept.success={0} успешно переведено на ваш счёт
+bchWallet.title=Кошелёк Bitcoin Cash
