--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1274,3 +1274,6 @@ message.comission.dynamic=Counted dynamicaly
 merchants.refill.XEM=Payment Address: {0}   <br>\
 field Message: {1}
 atbWallet.title=ATB-coin wallet
+message.cp.USD=USD markets
+message.cp.BTC=BTC markets
+message.cp.FIAT=Local markets
