--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1407,3 +1407,15 @@ message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
 transfer.accept.success={0} successfully transferred to your account
 bchWallet.title=Bitcoin Cash Wallet
+admin.autoTrading.title=Auto-trading settings
+admin.autoTrading.settings.roles=Role settings
+admin.autoTrading.settings.bot=Bot settings
+admin.autoTrading.role=Role
+admin.autoTrading.sameRoleOnly=Accept orders only from same role users
+admin.autoTrading.botAccept=Allow bot to accept orders
+admin.autoTrading.bot.notCreated=Bot has not been created yet
+admin.autoTrading.bot.create=Create bot
+admin.autoTrading.bot.nickname=Nickname
+admin.autoTrading.bot.email=Email
+admin.autoTrading.bot.status=Enabled
+admin.autoTrading.bot.timeout=Timeout before accept, sec.
