--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1318,3 +1318,14 @@ orders.allRoles=Все роли
 admin.autoTrading.title=Настройки авто-торговли
 transfer.accept.success={0} успешно переведено на ваш счёт
 bchWallet.title=Кошелёк Bitcoin Cash
+admin.autoTrading.settings.roles=Настройки ролей
+admin.autoTrading.settings.bot=Настройки бота
+admin.autoTrading.role=Роль
+admin.autoTrading.sameRoleOnly=Принимать ордера только с той же ролью
+admin.autoTrading.botAccept=Разрешить боту принимать ордера
+admin.autoTrading.bot.notCreated=Бот ещё не создан
+admin.autoTrading.bot.create=Создать бота
+admin.autoTrading.bot.nickname=Никнейм
+admin.autoTrading.bot.email=Email
+admin.autoTrading.bot.status=Включён
+admin.autoTrading.bot.timeout=Отсрочка принятия, сек.
