fix messages in BTC wallet page

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1067,8 +1067,8 @@ btcWallet.history.time=Время
 btcWallet.unconfirmedBalance=Неподтверждённый баланс:
 btcWallet.password.title=Ввод пароля
 btcWallet.password.prompt=Пожалуйста, введите пароль кошелька:
-btcWallet.payment.dialog.title=Отправить BTC
-btcWallet.payment.prompt=Вы собираетесь оплатить __amount__ BTC на адрес __address__
+btcWallet.payment.dialog.title=Отправить {0}
+btcWallet.payment.prompt=Вы собираетесь оплатить __amount__ {0} на адрес __address__
 btcWallet.successResult=Платёж совершён успешно! ID транзакции {0}
 action.button.CONFIRM_USER_BUTTON=подтвердить
 action.button.CONFIRM_ADMIN_BUTTON=подтвердить
