--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1147,15 +1147,15 @@ btcWallet.address=Address
 btcWallet.history.category=Category
 btcWallet.history.amount=Amount
 btcWallet.history.fee=Fee amount
-btcWallet.amount=Amount, BTC
-btcWallet.fee=Recommended fee, BTC/kB
+btcWallet.amount=Amount, {0}
+btcWallet.fee=Recommended fee, {0}/kB
 btcWallet.history.confirmations=Confirmations
 btcWallet.history.time=Time
 btcWallet.unconfirmedBalance=Unconfirmed balance:
 btcWallet.password.title=Enter password
 btcWallet.password.prompt=Please enter wallet password:
-btcWallet.payment.dialog.title=Send BTC
-btcWallet.payment.prompt=You are going to pay __amount__ BTC to address __address__
+btcWallet.payment.dialog.title=Send {0}
+btcWallet.payment.prompt=You are going to pay __amount__ {0} to address __address__
 btcWallet.successResult=Payment succeeded! Transaction ID {0}
 admin.reset=Reset
 adminAuthority.MANAGE_BTC_CORE_WALLET=Bitcoin Core wallet management
@@ -1205,7 +1205,7 @@ admin.currencyLimits.maxRate=Maximal rate
 admin.currencyLimits.menu.currencies=Currency refill/withdraw
 admin.currencyLimits.menu.currencyPairs=Order prices
 admin.referrals=Referrals
-btcWallet.actualFee=Actual fee, BTC/kB
+btcWallet.actualFee=Actual fee, {0}/kB
 btcWallet.changeFee=Update
 order.minrate=يجب أن يكون سعر الصرف أكبر من {0}
 order.maxrate=يجب أن يكون سعر الصرف أقل من {0}
