--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -982,15 +982,15 @@ btcWallet.address=Address
 btcWallet.history.category=Category
 btcWallet.history.amount=Amount
 btcWallet.history.fee=Fee amount
-btcWallet.amount=Amount, BTC
-btcWallet.fee=Recommended fee, BTC/kB
+btcWallet.amount=Amount, {0}
+btcWallet.fee=Recommended fee, {0}/kB
 btcWallet.history.confirmations=Confirmations
 btcWallet.history.time=Time
 btcWallet.unconfirmedBalance=Unconfirmed balance:
 btcWallet.password.title=Enter password
 btcWallet.password.prompt=Please enter wallet password:
-btcWallet.payment.dialog.title=Send BTC
-btcWallet.payment.prompt=You are going to pay __amount__ BTC to address __address__
+btcWallet.payment.dialog.title=Send {0}
+btcWallet.payment.prompt=You are going to pay __amount__ {0} to address __address__
 btcWallet.successResult=Payment succeeded! Transaction ID {0}
 
 action.button.CONFIRM_USER_BUTTON=confirm
@@ -1041,7 +1041,7 @@ admin.currencyLimits.maxRate=Maximal rate
 admin.currencyLimits.menu.currencies=Currency refill/withdraw
 admin.currencyLimits.menu.currencyPairs=Order prices
 admin.referrals=Referrals
-btcWallet.actualFee=Actual fee, BTC/kB
+btcWallet.actualFee=Actual fee, {0}/kB
 btcWallet.changeFee=Update
 order.minrate=汇率必须大于{0}
 order.maxrate=汇率必须小于{0}
