--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -911,15 +911,15 @@ btcWallet.address=Address
 btcWallet.history.category=Category
 btcWallet.history.amount=Amount
 btcWallet.history.fee=Fee amount
-btcWallet.amount=Amount, BTC
-btcWallet.fee=Recommended fee, BTC/kB
+btcWallet.amount=Amount, {0}
+btcWallet.fee=Recommended fee, {0}/kB
 btcWallet.history.confirmations=Confirmations
 btcWallet.history.time=Time
 btcWallet.unconfirmedBalance=Unconfirmed balance:
 btcWallet.password.title=Enter password
 btcWallet.password.prompt=Please enter wallet password:
-btcWallet.payment.dialog.title=Send BTC
-btcWallet.payment.prompt=You are going to pay __amount__ BTC to address __address__
+btcWallet.payment.dialog.title=Send {0}
+btcWallet.payment.prompt=You are going to pay __amount__ {0} to address __address__
 btcWallet.successResult=Payment succeeded! Transaction ID {0}
 action.button.CONFIRM_USER_BUTTON=confirm
 action.button.CONFIRM_ADMIN_BUTTON=confirm
@@ -974,7 +974,7 @@ admin.currencyLimits.maxRate=Maximal rate
 admin.currencyLimits.menu.currencies=Currency refill/withdraw
 admin.currencyLimits.menu.currencyPairs=Order prices
 admin.referrals=Referrals
-btcWallet.actualFee=Actual fee, BTC/kB
+btcWallet.actualFee=Actual fee, {0}/kB
 btcWallet.changeFee=Update
 
 order.minrate=The exchange rate must be greater than {0}
@@ -990,7 +990,6 @@ admin.order.acceptsuccess=Order {0} accepted successfully
 manageOrder.title=Manage orders
 orderinfo.orderSource=Source order
 orderinfo.orderChildren=Derived orders
-btcWallet.confirmedNonSpendableBalance=Balance on confirmation:
 
 refill.createError = Error while the refill request creation
 merchants.refillNotification.header=Exrates Refill notification
