add dogecoin - base

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1399,9 +1399,6 @@ message.comission.dynamic=Counted dynamicaly
 merchants.refill.XEM=Payment Address: {0}   <br>\
 field Message: {1}
 atbWallet.title=ATB-coin wallet
-order.accept.wrongRole=You are not allowed to accept orders created by {0}
-orders.roleFilter=Show orders for roles
-orders.allRoles=All roles
 message.cp.USD=USD markets
 message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
@@ -1410,6 +1407,7 @@ orders.roleFilter=Show orders for roles
 orders.allRoles=All roles
 transfer.accept.success={0} successfully transferred to your account
 bchWallet.title=Bitcoin Cash Wallet
+dogeWallet.title=Dogecoin Wallet
 admin.autoTrading.title=Auto-trading settings
 admin.autoTrading.settings.roles=Role settings
 admin.autoTrading.settings.bot=Bot settings
