--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1183,3 +1183,4 @@ message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
 transfer.accept.success={0} successfully transferred to your account
 bchWallet.title=Bitcoin Cash Wallet
+dogeWallet.title=Dogecoin Wallet
