--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1319,10 +1319,6 @@ admin.autoTrading.title=Настройки авто-торговли
 message.cp.USD=USD markets
 message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
-order.accept.wrongRole=Вы не можете принять ордер пользователя с ролью {0}
-orders.roleFilter=Показывать ордера только для текущей роли
-orders.allRoles=Все роли
-admin.autoTrading.title=Настройки авто-торговли
 transfer.accept.success={0} успешно переведено на ваш счёт
 bchWallet.title=Кошелёк Bitcoin Cash
 admin.autoTrading.settings.roles=Настройки ролей
@@ -1336,3 +1332,4 @@ admin.autoTrading.bot.nickname=Никнейм
 admin.autoTrading.bot.email=Email
 admin.autoTrading.bot.status=Включён
 admin.autoTrading.bot.timeout=Отсрочка принятия, сек.
+dogeWallet.title=Кошелёк Dogecoin
