bot trader stage 2 - admin

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1183,8 +1183,15 @@ message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
 transfer.accept.success={0} successfully transferred to your account
 bchWallet.title=Bitcoin Cash Wallet
-admin.autoTrading.settings.bot.launch=Bot launch settings
-admin.autoTrading.settings.bot.trading=Bot trading settings
+admin.autoTrading.settings.bot.launch=Launch settings
+admin.autoTrading.settings.bot.trading=Trading settings
 admin.autoTrading.bot.launchInterval=Interval between launches, min
 admin.autoTrading.bot.createTimeout=Timeout between creation, s
 admin.autoTrading.bot.quantityPerSeq=Number of orders per sequence
+admin.autoTrading.settings.bot.buy=Buy settings
+admin.autoTrading.settings.bot.sell=Sell settings
+admin.autoTrading.settings.amountLimits=Amount limits
+admin.autoTrading.settings.priceLimits=Price limits
+admin.autoTrading.settings.priceStep=Price step
+admin.autoTrading.settings.min=Min:
+admin.autoTrading.settings.max=Max:
