--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1280,9 +1280,6 @@ orders.allRoles=All roles
 message.cp.USD=USD markets
 message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
-order.accept.wrongRole=You are not allowed to accept orders created by {0}
-orders.roleFilter=Show orders for roles
-orders.allRoles=All roles
 transfer.accept.success={0} successfully transferred to your account
 bchWallet.title=Bitcoin Cash Wallet
 admin.autoTrading.title=Auto-trading settings
@@ -1297,3 +1294,15 @@ admin.autoTrading.bot.nickname=Nickname
 admin.autoTrading.bot.email=Email
 admin.autoTrading.bot.status=Enabled
 admin.autoTrading.bot.timeout=Timeout before accept, sec.
+admin.autoTrading.settings.bot.launch=Launch settings
+admin.autoTrading.settings.bot.trading=Trading settings
+admin.autoTrading.bot.launchInterval=Interval between launches, min
+admin.autoTrading.bot.createTimeout=Timeout between creation, s
+admin.autoTrading.bot.quantityPerSeq=Number of orders per sequence
+admin.autoTrading.settings.bot.buy=Buy settings
+admin.autoTrading.settings.bot.sell=Sell settings
+admin.autoTrading.settings.amountLimits=Amount limits
+admin.autoTrading.settings.priceLimits=Price limits
+admin.autoTrading.settings.priceStep=Price step
+admin.autoTrading.settings.min=Min:
+admin.autoTrading.settings.max=Max:
