--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1319,10 +1319,6 @@ admin.autoTrading.title=Настройки авто-торговли
 message.cp.USD=USD markets
 message.cp.BTC=BTC markets
 message.cp.FIAT=Local markets
-order.accept.wrongRole=Вы не можете принять ордер пользователя с ролью {0}
-orders.roleFilter=Показывать ордера только для текущей роли
-orders.allRoles=Все роли
-admin.autoTrading.title=Настройки авто-торговли
 transfer.accept.success={0} успешно переведено на ваш счёт
 bchWallet.title=Кошелёк Bitcoin Cash
 admin.autoTrading.settings.roles=Настройки ролей
@@ -1336,3 +1332,15 @@ admin.autoTrading.bot.nickname=Никнейм
 admin.autoTrading.bot.email=Email
 admin.autoTrading.bot.status=Включён
 admin.autoTrading.bot.timeout=Отсрочка принятия, сек.
+admin.autoTrading.settings.bot.launch=Настройки запуска
+admin.autoTrading.settings.bot.trading=Настройки торговли
+admin.autoTrading.bot.launchInterval=Интервал между запусками, мин
+admin.autoTrading.bot.createTimeout=Промежуток между созданием ордеров, с
+admin.autoTrading.bot.quantityPerSeq=Количество ордеров за цикл
+admin.autoTrading.settings.bot.buy=Настройки покупки
+admin.autoTrading.settings.bot.sell=Нистройки продажи
+admin.autoTrading.settings.amountLimits=Ограничения суммы
+admin.autoTrading.settings.priceLimits=Ограничения цены
+admin.autoTrading.settings.priceStep=Шаг цены
+admin.autoTrading.settings.min=Min:
+admin.autoTrading.settings.max=Max:
