--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1249,3 +1249,15 @@ admin.autoTrading.bot.nickname=Nickname
 admin.autoTrading.bot.email=Email
 admin.autoTrading.bot.status=Enabled
 admin.autoTrading.bot.timeout=Timeout before accept, sec.
+admin.autoTrading.settings.bot.launch=Launch settings
+admin.autoTrading.settings.bot.trading=Trading settings
+admin.autoTrading.bot.launchInterval=Interval between launches, min
+admin.autoTrading.bot.createTimeout=Timeout between creation, s
+admin.autoTrading.bot.quantityPerSeq=Number of orders per sequence
+admin.autoTrading.settings.bot.buy=Buy settings
+admin.autoTrading.settings.bot.sell=Sell settings
+admin.autoTrading.settings.amountLimits=Amount limits
+admin.autoTrading.settings.priceLimits=Price limits
+admin.autoTrading.settings.priceStep=Price step
+admin.autoTrading.settings.min=Min:
+admin.autoTrading.settings.max=Max:
