admin input validation etc

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1261,3 +1261,7 @@ admin.autoTrading.settings.priceLimits=Price limits
 admin.autoTrading.settings.priceStep=Price step
 admin.autoTrading.settings.min=Min:
 admin.autoTrading.settings.max=Max:
+atbWallet.title=ATB-coin wallet
+admin.autoTrading.settings.minGreater=Min value cannot be greater than max value;
+admin.autoTrading.bot.notEnabled=Bot not enabled
+admin.autoTrading.bot.notFound=Bot with id (0) not found
