--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1250,3 +1250,5 @@ admin.autoTrading.bot.email=Email
 admin.autoTrading.bot.status=Enabled
 admin.autoTrading.bot.timeout=Timeout before accept, sec.
 dogeWallet.title=Dogecoin Wallet
+input.warning.Payeer=ATTENTION! We are having temporary technical problems with automatic refill through Payeer.<br>\
+Please contact support after payment to pass costs to your account
