--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1184,5 +1184,5 @@ message.cp.FIAT=Local markets
 transfer.accept.success={0} successfully transferred to your account
 bchWallet.title=Bitcoin Cash Wallet
 dogeWallet.title=Dogecoin Wallet
-input.warning.Payeer=ATTENTION! We are having temporary technical problems with automatic refill through Payeer.<br>\
-Please contact support after payment to pass costs to your account
+input.warning.Payeer=ATTENTION! Temporary technical problems with automatic refill through Payeer.<br>\\\
+Please contact our support after payment to pass costs to your account!
