--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1420,5 +1420,5 @@ admin.autoTrading.bot.nickname=Nickname
 admin.autoTrading.bot.email=Email
 admin.autoTrading.bot.status=Enabled
 admin.autoTrading.bot.timeout=Timeout before accept, sec.
-input.warning.Payeer=ATTENTION! We are having temporary technical problems with automatic refill through Payeer.<br>\
-Please contact support after payment to pass costs to your account
+input.warning.Payeer=ATTENTION! Temporary technical problems with automatic refill through Payeer.<br>\\\
+Please contact our support after payment to pass costs to your account!
