add survey.js local lib

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1201,3 +1201,5 @@ admin.autoTrading.settings.max=Max:
 admin.autoTrading.settings.minGreater=Min value cannot be greater than max value;
 admin.autoTrading.bot.notEnabled=Bot not enabled
 admin.autoTrading.bot.notFound=Bot with id (0) not found
+admin.autoTrading.considerRange=Consider orders for price range computation
+admin.autoTrading.settings.considerRange=Consider user orders for price range
