--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1310,3 +1310,5 @@ admin.autoTrading.settings.max=Max:
 admin.autoTrading.settings.minGreater=Min value cannot be greater than max value;
 input.warning.Payeer=ATTENTION! Temporary technical problems with automatic refill through Payeer.<br>\\\
 Please contact our support after payment to pass costs to your account!
+admin.autoTrading.considerRange=Consider orders for price range computation 
+admin.autoTrading.settings.considerRange=Consider user orders for price range
