--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1268,3 +1268,5 @@ atbWallet.title=ATB-coin wallet
 admin.autoTrading.settings.minGreater=Min value cannot be greater than max value;
 admin.autoTrading.bot.notEnabled=Bot not enabled
 admin.autoTrading.bot.notFound=Bot with id (0) not found
+admin.autoTrading.considerRange=Consider orders for price range computation 
+admin.autoTrading.settings.considerRange=Consider user orders for price range
