add allow manual change for certain roles only

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1167,7 +1167,7 @@ order.accept.wrongRole=You are not allowed to accept orders created by {0}
 orders.roleFilter=Show orders only for current role
 admin.autoTrading.title=Auto-trading settings
 admin.autoTrading.settings.roles=Role settings
-admin.autoTrading.settings.bot=General bot settings
+admin.autoTrading.settings.bot=General settings
 admin.autoTrading.role=Role
 admin.autoTrading.sameRoleOnly=Accept orders only from same role users
 admin.autoTrading.botAccept=Allow bot to accept orders
