--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1284,7 +1284,7 @@ transfer.accept.success={0} successfully transferred to your account
 bchWallet.title=Bitcoin Cash Wallet
 admin.autoTrading.title=Auto-trading settings
 admin.autoTrading.settings.roles=Role settings
-admin.autoTrading.settings.bot=Bot settings
+admin.autoTrading.settings.bot=General settings
 admin.autoTrading.role=Role
 admin.autoTrading.sameRoleOnly=Accept orders only from same role users
 admin.autoTrading.botAccept=Allow bot to accept orders
