--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1407,7 +1407,7 @@ bchWallet.title=Bitcoin Cash Wallet
 dogeWallet.title=Dogecoin Wallet
 admin.autoTrading.title=Auto-trading settings
 admin.autoTrading.settings.roles=Role settings
-admin.autoTrading.settings.bot=Bot settings
+admin.autoTrading.settings.bot=General settings
 admin.autoTrading.role=Role
 admin.autoTrading.sameRoleOnly=Accept orders only from same role users
 admin.autoTrading.botAccept=Allow bot to accept orders
